[gd_scene load_steps=2 format=2]

[ext_resource path="res://StartSpatial.gd" type="Script" id=1]

[node name="StartSpacial" type="Spatial"]
script = ExtResource( 1 )
__meta__ = {
"_edit_vertical_guides_": [ 514.638 ]
}

[node name="StartUI" type="CanvasLayer" parent="."]

[node name="Label" type="Label" parent="StartUI"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -144.634
margin_top = 158.089
margin_right = 4.36578
margin_bottom = 240.089
rect_scale = Vector2( 2, 2 )
text = "Welcome to GodotBird tap the screen to go up, avoid the objects. Press start to begin
 "
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HighScoreLabel" type="Label" parent="StartUI"]
margin_left = 22.5982
margin_top = 16.8179
margin_right = 102.598
margin_bottom = 30.8179
rect_scale = Vector2( 2, 2 )
text = "Highscore: 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="startButton" type="Button" parent="StartUI"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -77.3625
margin_top = 129.498
margin_right = -27.3625
margin_bottom = 149.498
rect_scale = Vector2( 3, 3 )
text = "START"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="StartUI/startButton" to="." method="_on_startButton_pressed"]
